# challenge_bit

./: .gitignore  README.md  domains-example.json  pyproject.toml  requirements.txt
scrapper/: constants.py  helpers.py  scrapper.py
